src/less/blocks/header.less
/*
 This file is a part of libertysoil.org website
 Copyright (C) 2015  Loki Education (Social Enterprise)

 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
.header {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 100;

  height: @headerHeight;
  display: flex;
  justify-content: center;
  align-items: center;

  background: @color__block_background;
  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);

  &-transparent {
    background: none;
    box-shadow: none;

    .dropdown-open .dropdown__trigger {
      color: @color__gray !important;
    }
  }
}

.header__corner {
  display: flex;
  width: 60px;

  // height: 100%;
  height: 60px;

  align-items: center;
  justify-content: center;
  
  &--colored {
    background-color: #f1f1f1;
    transition: opacity 0.25s ease-out;

    &:hover {
      opacity: 0.75;
    }
  }
}

.header__body {
  display: flex;
  width: 100%;
  height: 100%;

  @media @fluidDesktopWide {
    width: 1366px;
  }
}

.header__content {
  flex: 1;
  display: flex;
}

.header__toolbar {
  display: flex;
  height: 100%;
  align-items: center;
  justify-content: flex-end;
}

.header__breadcrumbs {
  flex: 1;
  display: flex;
  align-items: center;
}

.header__breadcrumbs,
.header__logo {
  margin-top: 0;
}

.header__toolbar_item {
  display: flex;
  align-items: center;

  &-right_space {
    margin-right: @space;
  }

  &-left_space {
    margin-right: @space;
  }
}

.header__auth {
  > *, .dropdown__trigger {
    height: 100%;
  }
}

.header__indent {
  margin-top: 60px;
}

